added the triggeredByDS flag, to be used when we want to start SUMO from DS, also make it possible to stop simulation with a message from DS. NoGui config is added for ManualDriving config

--- a/.cproject
+++ b/.cproject
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?fileVersion 5.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage2">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
-		<cconfiguration id="cdt.managedbuild.config.gnu.exe.debug.1091374591">
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1091374591_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.debug.1091374591" name="Debug"/>
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1091374591_cdtBuildSystem" version="4.0.0"/>
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1091374591_org.eclipse.cdt.core.externalSettings"/>
+		<cconfiguration id="cdt.managedbuild.config.gnu.exe.debug.1754588853">
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1754588853_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.debug.1754588853" name="Debug"/>
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1754588853_cdtBuildSystem" version="4.0.0"/>
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1754588853_org.eclipse.cdt.core.externalSettings"/>
 		</cconfiguration>
-		<cconfiguration id="cdt.managedbuild.config.gnu.exe.release.402337651">
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.402337651_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.release.402337651" name="Release"/>
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.402337651_cdtBuildSystem" version="4.0.0"/>
+		<cconfiguration id="cdt.managedbuild.config.gnu.exe.release.1115889454">
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.1115889454_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.release.1115889454" name="Release"/>
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.1115889454_cdtBuildSystem" version="4.0.0"/>
 		</cconfiguration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="plexe-veins.cdt.managedbuild.target.gnu.exe.1157653395" name="Executable" projectType="cdt.managedbuild.target.gnu.exe"/>
+		<project id="plexe-veins.cdt.managedbuild.target.gnu.exe.288576463" name="Executable" projectType="cdt.managedbuild.target.gnu.exe"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.402337651;cdt.managedbuild.config.gnu.exe.release.402337651.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.812305452;cdt.managedbuild.tool.gnu.c.compiler.input.1119549471">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1115889454;cdt.managedbuild.config.gnu.exe.release.1115889454.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.579932174;cdt.managedbuild.tool.gnu.c.compiler.input.735908655">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.1091374591;cdt.managedbuild.config.gnu.exe.debug.1091374591.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1845323065;cdt.managedbuild.tool.gnu.c.compiler.input.2085137273">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.1754588853;cdt.managedbuild.config.gnu.exe.debug.1754588853.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1130993332;cdt.managedbuild.tool.gnu.c.compiler.input.498368871">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.1091374591;cdt.managedbuild.config.gnu.exe.debug.1091374591.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1708838640;cdt.managedbuild.tool.gnu.cpp.compiler.input.381426921">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.1754588853;cdt.managedbuild.config.gnu.exe.debug.1754588853.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1492325727;cdt.managedbuild.tool.gnu.cpp.compiler.input.1947115015">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.402337651;cdt.managedbuild.config.gnu.exe.release.402337651.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.349113753;cdt.managedbuild.tool.gnu.cpp.compiler.input.848616370">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1115889454;cdt.managedbuild.config.gnu.exe.release.1115889454.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.504833335;cdt.managedbuild.tool.gnu.cpp.compiler.input.1618422676">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
