--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -213,6 +213,7 @@ seed-set = ${repetition}
 **.traffic.laneManualCars = 1
 
 **.traffic.platoonRoute = "platooning_route"
+**.traffic.triggeredByDS = true
 
 
 ##########################################################
@@ -286,6 +287,14 @@ repeat = 1
 *.node[*].scenario_type = "ManualDrivingScenario"
 
 *.node[*].appl.IP_DS = "192.168.164.101"
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
+##########################################################
+[Config ManualDrivingAuto]
+extends = ManualDriving
+*.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
