--- a/examples/cut_in/original_omnetpp.ini
+++ b/examples/cut_in/original_omnetpp.ini
@@ -7,9 +7,6 @@ num-rngs = 6
 ned-path = .
 network = scenario
 
-######THIS OMNET FILE IS INTENDED FOR PURE PLEXE SIMULATION#######
-
-
 ##########################################################
 #            Simulation parameters                       #
 ##########################################################
@@ -107,7 +104,7 @@ seed-set = ${repetition}
 **.numberOfCars = ${nCars = 3}
 **.numberOfCarsPerPlatoon = ${platoonSize = 3}
 **.numberOfLanes = ${nLanes = 1}
-**.numberOfManualCars = ${nCarsManual = 0}
+**.numberOfManualCars = ${nCarsManual = 1}
 
 
 ##########################################################
@@ -145,11 +142,11 @@ seed-set = ${repetition}
 
 
 #controllers to be tested
-**.numericController = ${controller = 1, 1, 1, 2, 2, 2}
-*.node[*].scenario.controller = ${sController = "CACC", "CACC", "CACC", "PLOEG", "PLOEG", "PLOEG" ! controller}
+**.numericController = ${controller = 0, 0, 1, 2, 3, 4}
+*.node[*].scenario.controller = ${sController = "ACC", "ACC", "CACC", "PLOEG", "CONSENSUS", "HH_GCDC" ! controller}
 
 #headway for ACCs
-**.headway = ${headway = 0.1, 0.1, 0.1, 0.1, 0.1, 0.1 ! controller}s
+**.headway = ${headway = 0.3, 1.2, 0.1, 0.1, 0.1, 0.1 ! controller}s
 *.node[*].scenario.accHeadway = ${headway}s
 *.node[*].scenario.leaderHeadway = ${leaderHeadway = 1.2}s
 
@@ -208,12 +205,12 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${15, 20, 30, 15, 20, 30 ! controller}m
-**.traffic.platoonInsertHeadway = ${0.5, 0.7, 1.1, 0.5, 0.7, 1.1 ! controller}s
+**.traffic.platoonInsertDistance = ${2, 2, 10, 10, 15, 30 ! controller}m
+**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8, 0 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 **.traffic.nManualCars = ${nCarsManual}
-**.traffic.laneManualCars = 0
+**.traffic.laneManualCars = 1
 
 **.traffic.platoonRoute = "platooning_route"
 **.traffic.triggeredByDS = false
