now we get a proper human driver vehicle in the scenario

--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -47,8 +47,8 @@ sim-time-limit = 1e6 s
 ##########################################################
 *.manager.updateInterval = 0.01s
 *.manager.host = "localhost"
-*.manager.moduleType = "Car"
-*.manager.moduleName = "node"
+*.manager.moduleType = "platoon_vehicle=Car manual_car=Car vtypehuman=0"
+*.manager.moduleName = "platoon_vehicle=node manual_car=node vtypehuman=0"
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
@@ -127,9 +127,9 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
-*.node[*].scenario.caccSpacing = ${CACCgap=15}
+*.node[*].scenario.caccSpacing = ${CACCgap=15, 20, 30, 15, 20, 30  ! controller}
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.ploegH = ${ploegH = 0.5}s
+*.node[*].scenario.ploegH = ${ploegH = 0.5, 0.7, 1.1, 0.5, 0.7, 1.1 ! controller}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
 *.node[*].scenario.useRealisticEngine = false
@@ -209,7 +209,7 @@ seed-set = ${repetition}
 **.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
 **.traffic.platoonInsertDistance = ${15, 20, 30, 15, 20, 30 ! controller}m
-**.traffic.platoonInsertHeadway = ${0.5, 0.7, 1.1, 0.5, 0.7, 1.1 ! controller}s
+**.traffic.platoonInsertHeadway = ${0, 0, 0, 0, 0, 0 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 **.traffic.nManualCars = ${nCarsManual}
@@ -290,6 +290,17 @@ repeat = 1
 *.node[*].scenario_type = "ManualDrivingScenario"
 
 *.node[*].appl.IP_DS = "192.168.164.101"
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
+##########################################################
+[Config CutIn]
+*.node[*].appl_type = "CutInApp"
+
+repeat = 1
+
+*.node[*].scenario_type = "ManualDrivingScenario"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
