SUMO simulation without platoon is now running without crashing

--- a/examples/cut_in/sumocfg/merging_highway_no_platoon.sumo.cfg
+++ b/examples/cut_in/sumocfg/merging_highway_no_platoon.sumo.cfg
@@ -3,14 +3,14 @@
 <configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/sumoConfiguration.xsd">
 
     <input>
-        <net-file value="the_merging_highway.net.xml"/>
-        <route-files value="merging_highway.rou.xml"/>
-        <additional-files value="merging_highway.add.xml"/>
+        <net-file value="the_merging_highway_no_platoon.net.xml"/>
+        <route-files value="merging_highway_no_platoon.rou.xml"/>
+        <additional-files value="merging_highway_no_platoon.add.xml"/>
     </input>
 
     <time>
         <begin value="0"/>
-        <end value="81600"/>
+        <end value="86400"/>
         <step-length value="0.01"/>
     </time>
 
