completed SUMO somulation with log(s)

--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -166,7 +166,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 60 s
+*.node[*].appl.simulationDuration = 86400 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -343,6 +343,15 @@ output-scalar-file = ${resultdir}/Sinusoidal_${controller}_${headway}_${repetiti
 ##########################################################
 [Config BrakingNoGui]
 extends = Braking
+*.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
+#force the config name in the output file to be the same as for the gui experiment
+output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
+
+[Config AutoPlatoon]
+
+[Config AutoPlatoonNoGui]
+extends = AutoPlatoon
 *.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
 #force the config name in the output file to be the same as for the gui experiment
 output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
