--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -104,8 +104,8 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 3}
-**.numberOfCarsPerPlatoon = ${platoonSize = 3}
+**.numberOfCars = ${nCars = 5}
+**.numberOfCarsPerPlatoon = ${platoonSize = 5}
 **.numberOfLanes = ${nLanes = 1}
 **.numberOfManualCars = ${nCarsManual = 0}
 
@@ -114,7 +114,8 @@ seed-set = ${repetition}
 #                    Position helper                     #
 ##########################################################
 
-*.node[*].helper_type = "PositionHelper"
+#*.node[*].helper_type = "PositionHelper"
+*.node[*].helper_type = "OneLaneMassiveHelper"
 *.node[*].helper.nLanes = ${nLanes}
 *.node[*].helper.platoonSize = ${platoonSize}
 *.node[*].helper.nCars = ${nCars}
@@ -349,10 +350,26 @@ output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}
 output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
 
 [Config AutoPlatoon]
+*.node[*].appl_type = "SimplePlatooningApp"
+
+repeat = 1
+
+#use the sinusoidal scenario
+*.node[*].scenario_type = "SinusoidalScenario"
+
+#make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
+*.node[*].scenario.leaderOscillationFrequency = 0.2 Hz
+*.node[*].scenario.oscillationAmplitude = 10 kmph
+*.node[*].scenario.startOscillating = 5 s
+
+*.manager.commandLine = "sumo-gui --remote-port $port --seed $seed --configuration-file ./sumocfg/merging_highway_auto_platoon.sumo.cfg"
+#force the config name in the output file to be the same as for the gui experiment
+output-vector-file = ${resultdir}/AutoPlatoon_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/AutoPlatoon_${controller}_${headway}_${repetition}.sca
 
 [Config AutoPlatoonNoGui]
 extends = AutoPlatoon
 *.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
 #force the config name in the output file to be the same as for the gui experiment
-output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
+output-vector-file = ${resultdir}/AutoPlatoon_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/AutoPlatoon_${controller}_${headway}_${repetition}.sca
