changes so far to not stop the simulation when the first vehicle reaches destination, still does not work though

--- a/examples/cut_in/sumocfg/merging_highway_auto_platoon.sumo.cfg
+++ b/examples/cut_in/sumocfg/merging_highway_auto_platoon.sumo.cfg
@@ -10,12 +10,16 @@
 
     <time>
         <begin value="0"/>
-        <end value="86400"/>
+        <end value="8640"/>
         <step-length value="0.01"/>
     </time>
 
     <gui_only>
         <start value="false"/>
     </gui_only>
+
+    <processing>
+        <collision action="remove"/>
+    </processing>
 
 </configuration>
