--- a/examples/intersection/omnetpp.ini
+++ b/examples/intersection/omnetpp.ini
@@ -214,6 +214,7 @@ seed-set = ${repetition}
 **.traffic.laneManualCars = 1
 
 **.traffic.platoonRoute = "platooning_route"
+**.traffic.triggeredByDS = true
 
 
 ##########################################################
