--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -107,15 +107,15 @@ seed-set = ${repetition}
 **.numberOfCars = ${nCars = 5}
 **.numberOfCarsPerPlatoon = ${platoonSize = 5}
 **.numberOfLanes = ${nLanes = 1}
-**.numberOfManualCars = ${nCarsManual = 0}
+**.numberOfManualCars = ${nCarsManual = 1}
 
 
 ##########################################################
 #                    Position helper                     #
 ##########################################################
 
-#*.node[*].helper_type = "PositionHelper"
-*.node[*].helper_type = "OneLaneMassiveHelper"
+*.node[*].helper_type = "PositionHelper"
+#*.node[*].helper_type = "OneLaneMassiveHelper"
 *.node[*].helper.nLanes = ${nLanes}
 *.node[*].helper.platoonSize = ${platoonSize}
 *.node[*].helper.nCars = ${nCars}
@@ -155,7 +155,7 @@ seed-set = ${repetition}
 *.node[*].scenario.leaderHeadway = ${leaderHeadway = 1.2}s
 
 #average leader speed
-*.node[*].scenario.leaderSpeed = ${leaderSpeed = 90}kmph
+*.node[*].scenario.leaderSpeed = ${leaderSpeed = 120}kmph
 
 ##########################################################
 #                      Application                       #
@@ -217,14 +217,14 @@ seed-set = ${repetition}
 **.traffic.laneManualCars = 0
 
 **.traffic.platoonRoute = "platooning_route"
-**.traffic.triggeredByDS = false
+**.traffic.triggeredByDS = true
 
 
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
-*.manager.useDrivingSimulator = false
-*.manager.IPDS = "192.168.164.101"
+*.manager.useDrivingSimulator = true
+*.manager.IPDS = "192.168.164.10"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -290,7 +290,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "192.168.164.101"
+*.node[*].appl.IP_DS = "192.168.164.10"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
