--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -107,7 +107,7 @@ seed-set = ${repetition}
 **.numberOfCars = ${nCars = 5}
 **.numberOfCarsPerPlatoon = ${platoonSize = 5}
 **.numberOfLanes = ${nLanes = 1}
-**.numberOfManualCars = ${nCarsManual = 0}
+**.numberOfManualCars = ${nCarsManual = 1}
 
 
 ##########################################################
@@ -217,13 +217,13 @@ seed-set = ${repetition}
 **.traffic.laneManualCars = 0
 
 **.traffic.platoonRoute = "platooning_route"
-**.traffic.triggeredByDS = false
+**.traffic.triggeredByDS = true
 
 
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
-*.manager.useDrivingSimulator = false
+*.manager.useDrivingSimulator = true
 *.manager.IPDS = "192.168.164.101"
 
 #disable statistics recording for all other modules
