--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -128,9 +128,9 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
-*.node[*].scenario.caccSpacing = ${CACCgap=15, 20, 30, 15, 20, 30  ! controller}
+*.node[*].scenario.caccSpacing = ${CACCgap = 15, 20, 30, 15, 20, 30}
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.ploegH = ${ploegH = 0.5, 0.7, 1.1, 0.5, 0.7, 1.1 ! controller}s
+*.node[*].scenario.ploegH = ${ploegH = 0.5, 0.7, 1.1, 0.5, 0.7, 1.1}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
 *.node[*].scenario.useRealisticEngine = false
@@ -147,6 +147,7 @@ seed-set = ${repetition}
 
 #controllers to be tested
 **.numericController = ${controller = 1, 1, 1, 2, 2, 2}
+**.run_number = ${runNumber = 1, 2, 3, 4, 5, 6}
 *.node[*].scenario.controller = ${sController = "CACC", "CACC", "CACC", "PLOEG", "PLOEG", "PLOEG" ! controller}
 
 #headway for ACCs
@@ -218,13 +219,14 @@ seed-set = ${repetition}
 
 **.traffic.platoonRoute = "platooning_route"
 **.traffic.triggeredByDS = true
+**.traffic.platoonOffset = {0, 100, 100, 0, 0, 0 }m
 
 
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
 *.manager.useDrivingSimulator = true
-*.manager.IPDS = "192.168.164.10"
+*.manager.IPDS = "194.47.15.19"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -290,7 +292,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "192.168.164.10"
+*.node[*].appl.IP_DS = "194.47.15.19"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
@@ -311,8 +313,8 @@ output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repet
 extends = ManualDriving
 *.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
 
-output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
-output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+output-vector-file = ${resultdir}/${configname}_${runNumber}_${CACCgap}.vec
+output-scalar-file = ${resultdir}/${configname}_${runNumber}_${CACCgap}.sca
 
 ##########################################################
 [Config StandstillObstacle]
