--- a/examples/cut_in/omnetpp.ini
+++ b/examples/cut_in/omnetpp.ini
@@ -128,9 +128,9 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
-*.node[*].scenario.caccSpacing = ${CACCgap = 15, 20, 30, 15, 20, 30}
+*.node[*].scenario.caccSpacing = ${CACCgap = 15, 22.5, 30, 42.5, 15, 22.5, 30, 42.5 ! runNumber}
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.ploegH = ${ploegH = 0.5, 0.7, 1.1, 0.5, 0.7, 1.1}s
+*.node[*].scenario.ploegH = ${ploegH = 0.375, 0.6, 0.825, 1.2, 0.375, 0.6, 0.825, 1.2 ! runNumber}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
 *.node[*].scenario.useRealisticEngine = false
@@ -146,12 +146,12 @@ seed-set = ${repetition}
 
 
 #controllers to be tested
-**.numericController = ${controller = 1, 1, 1, 2, 2, 2}
-**.run_number = ${runNumber = 1, 2, 3, 4, 5, 6}
-*.node[*].scenario.controller = ${sController = "CACC", "CACC", "CACC", "PLOEG", "PLOEG", "PLOEG" ! controller}
+**.numericController = ${controller = 1, 1, 1, 1, 2, 2, 2, 2 ! runNumber}
+**.run_number = ${runNumber = 1, 2, 3, 4, 5, 6, 7, 8}
+*.node[*].scenario.controller = ${sController = "CACC", "CACC", "CACC", "CACC", "PLOEG", "PLOEG", "PLOEG", "PLOEG" ! runNumber}
 
 #headway for ACCs
-**.headway = ${headway = 0.6, 0.6, 0.6, 0.6, 0.6, 0.6 ! controller}s
+**.headway = ${headway = 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6 ! runNumber}s
 *.node[*].scenario.accHeadway = ${headway}s
 *.node[*].scenario.leaderHeadway = ${leaderHeadway = 1.2}s
 
@@ -168,7 +168,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 86400 s
+*.node[*].appl.simulationDuration = 120 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -210,8 +210,8 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${15, 20, 30, 15, 20, 30 ! controller}m
-**.traffic.platoonInsertHeadway = ${0, 0, 0, 0, 0, 0 ! controller}s
+**.traffic.platoonInsertDistance = ${15, 22.5, 30, 42.5, 15, 22.5, 30, 42.5 ! runNumber}m
+**.traffic.platoonInsertHeadway = ${0, 0, 0, 0, 0, 0, 0, 0 ! runNumber}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 **.traffic.nManualCars = ${nCarsManual}
@@ -219,14 +219,14 @@ seed-set = ${repetition}
 
 **.traffic.platoonRoute = "platooning_route"
 **.traffic.triggeredByDS = true
-**.traffic.platoonOffset = {0, 100, 100, 0, 0, 0 }m
+**.traffic.platoonOffset = {100, 100, 100, 100, 100, 100, 100, 100  ! runNumber}m
 
 
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
 *.manager.useDrivingSimulator = true
-*.manager.IPDS = "194.47.15.19"
+*.manager.IPDS = "194.47.15.48"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -292,7 +292,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.19"
+*.node[*].appl.IP_DS = "194.47.15.48"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
@@ -311,6 +311,7 @@ output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repet
 ##########################################################
 [Config ManualDrivingAuto]
 extends = ManualDriving
+
 *.manager.commandLine = "sumo --remote-port $port --seed $seed --configuration-file $configFile"
 
 output-vector-file = ${resultdir}/${configname}_${runNumber}_${CACCgap}.vec
