--- a/examples/cut_in/sumocfg/merging_highway.sumo.cfg
+++ b/examples/cut_in/sumocfg/merging_highway.sumo.cfg
@@ -18,4 +18,8 @@
         <start value="true"/>
     </gui_only>
 
+    <processing>
+        <collision action="remove"/>
+    </processing>
+
 </configuration>
