--- a/examples/cut_in/sumocfg/merging_highway.sumo.cfg
+++ b/examples/cut_in/sumocfg/merging_highway.sumo.cfg
@@ -3,7 +3,7 @@
 <configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/sumoConfiguration.xsd">
 
     <input>
-        <net-file value="the_merging_highway.net.xml"/>
+        <net-file value="the_merging_highway_fixed.net.xml"/>
         <route-files value="merging_highway.rou.xml"/>
         <additional-files value="merging_highway.add.xml"/>
     </input>
