added overtaking scenario and command to move vehicle in TraCICommandInterface

--- a/.cproject
+++ b/.cproject
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?fileVersion 5.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage2">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
-		<cconfiguration id="cdt.managedbuild.config.gnu.exe.debug.2129969341">
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.2129969341_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.debug.2129969341" name="Debug"/>
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.2129969341_cdtBuildSystem" version="4.0.0"/>
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.2129969341_org.eclipse.cdt.core.externalSettings"/>
+		<cconfiguration id="cdt.managedbuild.config.gnu.exe.debug.1817536630">
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1817536630_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.debug.1817536630" name="Debug"/>
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1817536630_cdtBuildSystem" version="4.0.0"/>
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.debug.1817536630_org.eclipse.cdt.core.externalSettings"/>
 		</cconfiguration>
-		<cconfiguration id="cdt.managedbuild.config.gnu.exe.release.1091168756">
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.1091168756_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.release.1091168756" name="Release"/>
-			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.1091168756_cdtBuildSystem" version="4.0.0"/>
+		<cconfiguration id="cdt.managedbuild.config.gnu.exe.release.572349960">
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.572349960_org.eclipse.cdt.core.settings" id="cdt.managedbuild.config.gnu.exe.release.572349960" name="Release"/>
+			<storageModule externalCElementFile="cdt.managedbuild.config.gnu.exe.release.572349960_cdtBuildSystem" version="4.0.0"/>
 		</cconfiguration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="plexe-veins.cdt.managedbuild.target.gnu.exe.1133320334" name="Executable" projectType="cdt.managedbuild.target.gnu.exe"/>
+		<project id="plexe-veins.cdt.managedbuild.target.gnu.exe.593287621" name="Executable" projectType="cdt.managedbuild.target.gnu.exe"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.2129969341;cdt.managedbuild.config.gnu.exe.debug.2129969341.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.805366538;cdt.managedbuild.tool.gnu.c.compiler.input.1972096650">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.572349960;cdt.managedbuild.config.gnu.exe.release.572349960.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1939147220;cdt.managedbuild.tool.gnu.cpp.compiler.input.908226916">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1091168756;cdt.managedbuild.config.gnu.exe.release.1091168756.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.1014145207;cdt.managedbuild.tool.gnu.c.compiler.input.948159400">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.572349960;cdt.managedbuild.config.gnu.exe.release.572349960.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.772669983;cdt.managedbuild.tool.gnu.c.compiler.input.1763145982">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.2129969341;cdt.managedbuild.config.gnu.exe.debug.2129969341.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1463513241;cdt.managedbuild.tool.gnu.cpp.compiler.input.1837872843">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.1817536630;cdt.managedbuild.config.gnu.exe.debug.1817536630.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1723576512;cdt.managedbuild.tool.gnu.c.compiler.input.2044193312">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1091168756;cdt.managedbuild.config.gnu.exe.release.1091168756.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.244500891;cdt.managedbuild.tool.gnu.cpp.compiler.input.141059009">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.1817536630;cdt.managedbuild.config.gnu.exe.debug.1817536630.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1527348999;cdt.managedbuild.tool.gnu.cpp.compiler.input.434229986">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
