--- a/examples/overtaking/omnetpp.ini
+++ b/examples/overtaking/omnetpp.ini
@@ -163,7 +163,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 200 s
+*.node[*].appl.simulationDuration = 12000 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -210,13 +210,17 @@ seed-set = ${repetition}
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 **.traffic.nManualCars = ${nCarsManual}
-**.traffic.laneManualCars = 2
+**.traffic.laneManualCars = 1
+
+**.traffic.platoonRoute = "platoon_route"
+**.traffic.triggeredByDS = false
+**.traffic.platoonOffset = {0, 0, -8000, -8000, 0, 0  ! controller}m
 
 ##########################################################
 #                    Driving Simulator                   #
 ##########################################################
-*.manager.useDrivingSimulator = false
-*.manager.IPDS = "194.47.15.48"
+*.manager.useDrivingSimulator = true
+*.manager.IPDS = "192.168.164.10"
 
 #disable statistics recording for all other modules
 **.scalar-recording = true
@@ -282,7 +286,7 @@ repeat = 1
 
 *.node[*].scenario_type = "ManualDrivingScenario"
 
-*.node[*].appl.IP_DS = "194.47.15.48"
+*.node[*].appl.IP_DS = "192.168.164.10"
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
@@ -321,3 +325,16 @@ extends = Braking
 #force the config name in the output file to be the same as for the gui experiment
 output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
+
+##########################################################
+[Config Overtaking]
+*.node[*].appl_type = "ManualDrivingApp"
+
+repeat = 1
+
+*.node[*].scenario_type = "OvertakingScenario"
+
+*.node[*].appl.IP_DS = "192.168.164.10"
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
