--- a/examples/overtaking/sumocfg/opposite.sumo.cfg
+++ b/examples/overtaking/sumocfg/opposite.sumo.cfg
@@ -3,7 +3,7 @@
 <configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/sumoConfiguration.xsd">
 
     <input>
-        <net-file value="opposite.net.xml"/>
+        <net-file value="opposite_10k.net.xml"/>
         <route-files value="opposite.rou.xml"/>
     </input>
 
