after the overtaking demo for NGEA2

--- a/examples/overtaking/omnetpp.ini
+++ b/examples/overtaking/omnetpp.ini
@@ -71,6 +71,7 @@ sim-time-limit = 1e6 s
 *.**.nic.phy80211p.decider = xmldoc("config.xml")
 *.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic.phy80211p.usePropagationDelay = true
+*.**.nic.phy80211p.propagationDelay = 0.0
 
 ##########################################################
 #                      Mobility                          #
@@ -101,8 +102,8 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 3}
-**.numberOfCarsPerPlatoon = ${platoonSize = 3}
+**.numberOfCars = ${nCars = 1}
+**.numberOfCarsPerPlatoon = ${platoonSize = 1}
 **.numberOfLanes = ${nLanes = 1}
 **.numberOfManualCars = ${nCarsManual = 1}
 
@@ -213,7 +214,7 @@ seed-set = ${repetition}
 **.traffic.laneManualCars = 1
 
 **.traffic.platoonRoute = "platoon_route"
-**.traffic.triggeredByDS = false
+**.traffic.triggeredByDS = true
 **.traffic.platoonOffset = {0, 0, -8000, -8000, 0, 0  ! controller}m
 
 ##########################################################
