--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -101,10 +101,10 @@ seed-set = ${repetition}
 #                   Common parameters                    #
 ##########################################################
 
-**.numberOfCars = ${nCars = 3}
-**.numberOfCarsPerPlatoon = ${platoonSize = 3}
+**.numberOfCars = ${nCars = 5}
+**.numberOfCarsPerPlatoon = ${platoonSize = 5}
 **.numberOfLanes = ${nLanes = 1}
-**.numberOfManualCars = ${nCarsManual = 1}
+**.numberOfManualCars = ${nCarsManual = 0}
 
 ##########################################################
 #                    Position helper                     #
@@ -162,7 +162,7 @@ seed-set = ${repetition}
 *.node[*].appl.*.scalar-recording = true
 *.node[*].appl.*.vector-recording = true
 #collect data for time
-*.node[*].appl.simulationDuration = 80 s
+*.node[*].appl.simulationDuration = 50 s
 
 ##########################################################
 #                Communication protocols                 #
@@ -321,3 +321,20 @@ extends = Braking
 #force the config name in the output file to be the same as for the gui experiment
 output-vector-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/Braking_${controller}_${headway}_${repetition}.sca
+
+##########################################################
+[Config AccAndBrake]
+*.node[*].appl_type = "SimplePlatooningApp"
+
+repeat = 1
+
+#use the braking scenario
+*.node[*].scenario_type = "AccelerateAndBrakeScenario"
+
+#make the leader decelerate with a certain deceleration
+*.node[*].scenario.brakingDeceleration = 8 mpsps
+*.node[*].scenario.startAccelerating = 15s
+
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
