--- a/examples/platooning/omnetpp.ini
+++ b/examples/platooning/omnetpp.ini
@@ -123,9 +123,9 @@ seed-set = ${repetition}
 *.node[*].scenario.caccC1 = 0.5
 *.node[*].scenario.caccXi = 1
 *.node[*].scenario.caccOmegaN = 0.2 Hz
-*.node[*].scenario.caccSpacing = ${CACCgap=15}
+*.node[*].scenario.caccSpacing = ${CACCgap=10}
 *.node[*].scenario.engineTau = 0.5 s
-*.node[*].scenario.ploegH = ${ploegH = 0.5}s
+*.node[*].scenario.ploegH = ${ploegH = 0.4}s
 *.node[*].scenario.ploegKp = 0.2
 *.node[*].scenario.ploegKd = 0.7
 *.node[*].scenario.useRealisticEngine = false
@@ -204,8 +204,8 @@ seed-set = ${repetition}
 #SUMO vtype for platooning vehicles
 **.traffic.platooningVType = "platoon_vehicle"
 #insert vehicles already at steady-state. distance depends on controller
-**.traffic.platoonInsertDistance = ${2, 2, 10, 10, 15, 30 ! controller}m
-**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0.5, 0.8, 0 ! controller}s
+**.traffic.platoonInsertDistance = ${2, 2, 15, 15, 15, 30 ! controller}m
+**.traffic.platoonInsertHeadway = ${0.3, 1.2, 0, 0, 0.8, 0 ! controller}s
 **.traffic.platoonLeaderHeadway = ${leaderHeadway}s
 
 **.traffic.nManualCars = ${nCarsManual}
@@ -335,6 +335,25 @@ repeat = 1
 *.node[*].scenario.brakingDeceleration = 8 mpsps
 *.node[*].scenario.startAccelerating = 15s
 
+
+output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
+
+
+##########################################################
+[Config CEBP]
+*.node[*].appl_type = "EmergencyBrakingApp"
+*.node[*].protocol_type = "CEBP"
+
+repeat = 1
+
+#use the sinusoidal scenario
+*.node[*].scenario_type = "SinusoidalScenario"
+
+#make the leader accelerate and decelerate with a sinusoidal trend. set to 0 for constant speed
+*.node[*].scenario.leaderOscillationFrequency = 0 Hz
+*.node[*].scenario.oscillationAmplitude = 0 kmph
+*.node[*].scenario.startOscillating = 5 s
 
 output-vector-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.vec
 output-scalar-file = ${resultdir}/${configname}_${controller}_${headway}_${repetition}.sca
